# OpenCV_Practice

./: compiling.txt  compiling~
ip_winter_work/: CMakeLists.txt  CMakeLists.txt~  eigth.cpp  fifth.cpp  first.cpp  fourth.cpp  second.cpp  seventh.cpp  sixth.cpp  third.cpp
opencv_blogspot_tutorial/: AddTrackbar.cpp  CMakeLists.txt  ChangeBrightness.cpp  ImageFiltering.cpp  SmoothBlur.cpp  changeContrast.cpp  colourDetection.cpp  fifth.cpp  first.cpp  fourth.cpp  histogramEqualization.cpp  mouseEvents.cpp  objectTracking.cpp  rotate.cpp  second.cpp  shape  shapeDetection.cpp  shapeDetection2.cpp  shapeDetectionVideo.cpp  third.cpp
