cmake_minimum_required(VERSION 2.8)
project(opencv_blogspot_tutorial)
find_package( OpenCV REQUIRED )
add_executable( first first.cpp )
target_link_libraries( first ${OpenCV_LIBS} )
add_executable( second second.cpp )
target_link_libraries( second ${OpenCV_LIBS} )
add_executable( third third.cpp )
target_link_libraries( third ${OpenCV_LIBS} )
add_executable( fourth fourth.cpp )
target_link_libraries( fourth ${OpenCV_LIBS} )
add_executable( fifth fifth.cpp )
target_link_libraries( fifth ${OpenCV_LIBS} )
add_executable( ChangeBrightness ChangeBrightness.cpp )
target_link_libraries( ChangeBrightness ${OpenCV_LIBS} )
add_executable( changeContrast changeContrast.cpp )
target_link_libraries( changeContrast ${OpenCV_LIBS} )
add_executable( histogramEqualization histogramEqualization.cpp )
target_link_libraries( histogramEqualization ${OpenCV_LIBS} )
add_executable( SmoothBlur SmoothBlur.cpp )
target_link_libraries( SmoothBlur ${OpenCV_LIBS} )
add_executable( AddTrackbar AddTrackbar.cpp )
target_link_libraries( AddTrackbar ${OpenCV_LIBS} )
add_executable( mouseEvents mouseEvents.cpp )
target_link_libraries( mouseEvents ${OpenCV_LIBS} )
add_executable( rotate rotate.cpp )
target_link_libraries( rotate ${OpenCV_LIBS} )
add_executable( colourDetection colourDetection.cpp )
target_link_libraries( colourDetection ${OpenCV_LIBS} )
add_executable( objectTracking objectTracking.cpp )
target_link_libraries( objectTracking ${OpenCV_LIBS} )
add_executable( shapeDetection shapeDetection.cpp )
target_link_libraries( shapeDetection ${OpenCV_LIBS} )
add_executable( shapeDetection2 shapeDetection2.cpp )
target_link_libraries( shapeDetection2 ${OpenCV_LIBS} )
add_executable( shapeDetectionVideo shapeDetectionVideo.cpp )
target_link_libraries( shapeDetectionVideo ${OpenCV_LIBS} )
